  * p2phttp: Fix a hang that could occur when used with --directory,
    and a repository in the directory got removed.
  * Added annex.assistant.allowunlocked config.
  * Add git-remote-p2p-annex and git-remote-tor-annex to standalone builds.
  * enableremote: Disallow using type= to attempt to change the type of an
    existing remote.

 -- Joey Hess <id@joeyh.name>  Fri, 29 Aug 2025 12:34:06 -0400

git-annex (10.20250828) upstream; urgency=medium

  * p2p: Added --enable option, which can be used to enable P2P networks
    provided by external commands git-annex-p2p-<netname>
  * Added git-remote-p2p-annex, which allows git pull and push to
    P2P networks provided by commands git-annex-p2p-<netname>
  * S3: Default to signature=v4 when using an AWS endpoint, since some
    AWS regions need v4 and all support it. When host= is used to specify
    a different S3 host, the default remains signature=v2.
  * webapp: Support setting up S3 buckets in regions that need v4
    signatures.
  * S3: When initremote is given the name of a bucket that already exists,
    automatically set datacenter to the right value, rather than needing it
    to be explicitly set.
  * info: Added --show option to pick which parts of the info to calculate
    and display.
  * Improve behavior when there are special remotes configured with
    autoenable=yes with names that conflict with other remotes.
  * adjust: When another branch has been manually merged into the adjusted
    branch, re-adjusting errors out, rather than losing that merge commit.
  * sync: When another branch has been manually merged into an adjusted
    branch, error out rather than only displaying a warning.
  * initremote: New onlyencryptcreds=yes which can be used along with
    embedcreds=yes, to only encrypt the embedded creds, without encrypting
    the content of the special remote. Useful for exporttree/importtree
    remotes.
  * Don't allow the type of encryption of an existing special remote to be